Bug 905002: backout bug 879717 until we can fix the mac-only regression rs=roc